# clash-xiaoy

./: .gitignore  .gitignore.bak  PUBLISH_GITHUB_25MB.md  README.md  README_en.md  README_zh-CN.md  README_zh-TW.md  build.gradle.kts  eslint.config.js  knip.config.ts  package.json  pnpm-lock.yaml  query  settings.gradle.kts  tsconfig.json
.github/workflows/: ci.yml  deps-build-linux.yaml  deps-create-updater.yaml  package-release.yml  release.yml  target-dev-build.yaml  target-release-build.yaml
.trae/documents/: PRD_UI_iOS风格改版.md  Page_Design_iOS风格UI规范_DesktopFirst.md  Technical_Architecture_UI_iOS风格改版.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: Cargo.toml
backend/clash-xiaoy-egui/src/: small.rs
backend/tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
backend/tauri/src/: consts.rs  (+5 more)
core/src/main/cpp/: CMakeLists.txt
design/: build.gradle.kts
frontend/clash-xiaoy/: check_locales_v3.cjs  check_messages.cjs  get_fix_list.cjs  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/interface/: package.json
frontend/ui/: package.json  tsconfig.json
manifest/: version.json
manifest/site/: index.html
scripts/: check.ts  generate-git-info.ts  osx-aarch64-upload.ts  pack-source.ts  package-windows.ts  portable.ts  prepare-nightly.ts  publish.ts  source-zip.ts  telegram-notify.ts
scripts/utils/: download.ts  index.ts  manifest.ts  resolve.ts  resource.ts
src/locales/: am.json  az.json  be.json  bn.json  bs.json  km.json  kn.json  lo.json  lt.json  lv.json  mk.json  ml.json  mn.json  mr.json  my.json  ne.json  pa.json  si.json  sk.json  sl.json  sq.json  sr.json  sw.json  ta.json  te.json  ur.json  uz.json  zu.json
(+791 files in other folders)
